# TimeTree

./: .clang-format  CMakeLists.txt  flake.nix
src/: TimeTree.hpp  main.cpp
test/: CMakeLists.txt  bench.cpp  main.cpp
